# ranker_ir

./: .gitignore  README.md  contrastive_train.py  docnos.json  docs.txt  domain_adaptation.py  eval.py  experiment.ipynb  llm_experiment.ipynb  llm_results.csv  main.py  produce_rankings.py  pyproject.toml  queries.txt  requirements.txt
evaluation_results/base/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/contrastive/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/llm_few/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/llm_zero/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/pseudo_labels/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/top_100_base/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/top_100_contrastive/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/top_100_pseudo_labels/: evaluation_results.csv  per_query_evaluation.csv
evaluation_results/zero_shot/: evaluation_results.csv  per_query_evaluation.csv
index/trec-covid/: data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta-0.fsomapfile.-1  data.meta-0.fsomapfile.0  data.meta-0.fsomapfile.1  data.meta-0.fsomapfile.2  data.meta-0.fsomapfile.3  data.meta-0.fsomapfile.4  data.meta-0.fsomapfile.5  data.meta-0.fsomapfile.6  data.meta-0.fsomapfile.7  data.meta-0.fsomapfile.8  data.meta-0.fsomapfile.9  data.meta.idx  data.properties
ranker/: docs.txt  main.py  pyproject.toml  queries.txt
ranker/src/neural_ranker/: ranker.py
(+7 files in other folders)
